## Process this file with automake to produce Makefile.in

## ------------------------------------------------------------------------
## Makefile.am (toplevel)
## autotools build system for Airframe
## ------------------------------------------------------------------------
## Copyright (C) 2006-2011 Carnegie Mellon University. All Rights Reserved.
## ------------------------------------------------------------------------
## Authors: Brian Trammell
## ------------------------------------------------------------------------
## GNU Lesser GPL Rights pursuant to Version 2.1, February 1999
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.227-7013
## ------------------------------------------------------------------------

SUBDIRS = src include doc
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libairframe.pc
